# CORTEX

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  main.py  needtodo  pyproject.toml
cortex/: __init__.py  settings.py  warmup.py
cortex/agent/: __init__.py  checkpointer.py  deps.py  graph.py  nodes.py  runner.py  serialization.py  state.py
cortex/api/: app.py  routes.py  schemas.py  serialize.py
cortex/cli/: ask.py  eval.py  ingest.py  query.py
cortex/eval/: dataset.py  runner.py
cortex/grading/: __init__.py  grader.py  prompts.py
cortex/ingestion/: __init__.py  pipeline.py
cortex/ingestion/chunking/: __init__.py  parent_child.py  token_counter.py
cortex/ingestion/embedding/: __init__.py  base.py  ollama.py
cortex/ingestion/parsers/: __init__.py  base.py  handbook.py
cortex/llm/: __init__.py  ollama.py
cortex/models/: __init__.py  document.py  enums.py
cortex/observability/: __init__.py  langfuse.py
cortex/retrieval/: __init__.py  dedupe.py  format.py  kb_retriever.py  pipeline.py  reranker.py
cortex/storage/: __init__.py  postgres.py  qdrant.py
cortex/synthesis/: __init__.py  prompts.py  result.py  synthesizer.py
cortex/worker/: __init__.py  celery_app.py  tasks.py
db/migrations/: 001_initial.sql
eval/: golden_handbook.json
tests/: test_agent_graph.py  test_api.py  test_ask_integration.py  test_chunker.py  test_eval.py  test_grader.py  test_handbook_parser.py  test_langfuse_tracing.py  test_reranker.py  test_retrieval.py  test_synthesis.py  test_warmup.py
