[project]
name = "cortex"
version = "0.1.0"
description = "Agentic retrieval platform — ingestion, hybrid search, agent orchestration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-frontmatter>=1.1",
    "qdrant-client>=1.12",
    "httpx>=0.27",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "tiktoken>=0.7",
    "fastembed>=0.4",
    "sentence-transformers>=3.0",
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "langfuse>=4.7.1",
    "langchain>=1.3.9",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.scripts]
cortex-ingest = "cortex.cli.ingest:main"
cortex-query = "cortex.cli.query:main"
cortex-ask = "cortex.cli.ask:main"
cortex-api = "cortex.api.app:main"
cortex-eval = "cortex.cli.eval:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
eval = [
    "ragas>=0.2",
    "datasets>=3.0",
    "langchain-ollama>=0.2",
    "langchain-community>=0.3,<0.4",
    "pandas>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cortex"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
